# ecom_shop

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: auth-api.yml  react-front.yml
Configs/filebeat/: filebeat.docker.yml
Dockerfiles/Fast_api_auth/: Dockerfile
Dockerfiles/Flask_auth/: Dockerfile
Dockerfiles/React/: Dockerfile
Front/: docker-compose.yaml
Front/react/: package-lock.json
Front/react/public/: index.html
Front/react/src/: App.js  index.js
Front/react/src/api/: axios.util.jsx
Services/flask_auth/: .env.example  docker-compose.prod.yml  docker-compose.yml  requirements.txt
Services/flask_auth/src/: gevent_runner.py
Services/flask_auth/tests/: docker-compose.yml
fast_api/authorization/: __main__.py
fast_api/authorization/core/: settings.py
fast_api/authorization/db/: postgres.py  redis.py
fast_api/authorization/models/: db_user.py
fast_api_auth/core/: settings.py
fast_api_auth/db/: postgres.py
flask_auth/: docker-compose.yml
flask_auth/app/models/: db_models.py
flask_auth/app/serializers/: auth.py
flask_auth/migrations/versions/: ad1f929c6e10_social_accounts.py
front/react/: .eslintrc.yml  package-lock.json  package.json
nginx/: nginx.conf
nginx/conf.d/: web.conf
nginx/configs/: web.conf
react_front/: .eslintrc.yml  package-lock.json  package.json
react_front/src/: App.css  App.js  App.test.js  index.css  index.js
services/flask_auth/: Makefile  docker-compose.prod.yml  docker-compose.yml  setup.cfg
services_backend/flask_auth/: .env.example  docker-compose.prod.yml  docker-compose.yml  requirements.txt
(+59 files in other folders)
