[tool.poetry]
name = "ecom_react"
version = "0.1.0"
description = ""
authors = ["Dmitrii <kachkindmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
backoff = "^2.1.2"
pydantic = "^1.9.1"
aioredis = "^2.0.1"
asyncpg = "^0.25.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
passlib = "^1.7.4"
uvicorn = "^0.17.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
